Prevent the ACE editor from overlapping the modal window (see #6497)

--- a/system/themes/default/src/main.css
+++ b/system/themes/default/src/main.css
@@ -355,6 +355,7 @@ h2.sub_headline_index {
 	border-top:1px solid #bbb;
 }
 .popup .tl_formbody_submit {
+	z-index:5;
 	position:fixed;
 	left:0;
 	bottom:0;
